# wiretest/wiredemo/internal/controller/hzw2controller.go
@@ -9,37 +9,37 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// NewHzwController hzw ctl构造函数
-func NewHzwController(userService service.IHzwService) *HzwController {
-	return &HzwController{
+// NewHzw2Controller hzw ctl构造函数
+func NewHzw2Controller(userService service.IHzw2Service) *Hzw2Controller {
+	return &Hzw2Controller{
 		userService: userService,
 	}
 }
 
-// HzwController hzw controller
-type HzwController struct {
-	userService service.IHzwService
+// Hzw2Controller hzw controller
+type Hzw2Controller struct {
+	userService service.IHzw2Service
 }
 
-// SaveHzw 创建Hzw
-// @Summary 创建Hzw
-// @Description 创建新的Hzw对象
+// SaveHzw2 创建Hzw2
+// @Summary 创建Hzw2
+// @Description 创建新的Hzw2对象
 // @Tags hzw
 // @Accept  json
 // @Produce  json
-// @Param hzw body model.Hzw true "Hzw信息"
-// @Success 200 {object} model.Hzw
+// @Param hzw body model.Hzw2 true "Hzw2信息"
+// @Success 200 {object} model.Hzw2
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /hzw [put]
-func (ctl *HzwController) SaveHzw(ginc *gin.Context) {
-	var hzw model.Hzw
+// @Router /hzw2 [put]
+func (ctl *Hzw2Controller) SaveHzw2(ginc *gin.Context) {
+	var hzw model.Hzw2
 	if err := ginc.ShouldBindJSON(&hzw); err != nil {
 		ginc.JSON(400, gin.H{"error": err.Error()})
 		return
 	}
 	ctx := context.Background()
-	result, err := ctl.userService.CreateHzw(ctx, &hzw)
+	result, err := ctl.userService.CreateHzw2(ctx, &hzw)
 	if err != nil {
 		ginc.JSON(500, gin.H{"error": err.Error()})
 		return
@@ -48,18 +48,18 @@ func (ctl *HzwController) SaveHzw(ginc *gin.Context) {
 	ginc.JSON(200, result)
 }
 
-// QueryById 根据ID查询Hzw
-// @Summary 根据ID查询Hzw
-// @Description 根据ID查询Hzw对象
+// QueryById 根据ID查询Hzw2
+// @Summary 根据ID查询Hzw2
+// @Description 根据ID查询Hzw2对象
 // @Tags hzw
 // @Accept  json
 // @Produce  json
-// @Param id query int true "Hzw ID"
-// @Success 200 {object} model.Hzw
+// @Param id query int true "Hzw2 ID"
+// @Success 200 {object} model.Hzw2
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /hzw [get]
-func (ctl *HzwController) QueryById(ginc *gin.Context) {
+// @Router /hzw2 [get]
+func (ctl *Hzw2Controller) QueryById(ginc *gin.Context) {
 	idstr, _ := ginc.GetQuery("id")
 	id, err := strconv.Atoi(idstr)
 	if err != nil {
@@ -68,7 +68,7 @@ func (ctl *HzwController) QueryById(ginc *gin.Context) {
 	}
 
 	ctx := context.Background()
-	hzw, err := ctl.userService.GetHzw(ctx, id)
+	hzw, err := ctl.userService.GetHzw2(ctx, id)
 	if err != nil {
 		ginc.JSON(500, gin.H{"error": err.Error()})
 		return
@@ -77,25 +77,26 @@ func (ctl *HzwController) QueryById(ginc *gin.Context) {
 	ginc.JSON(200, hzw)
 }
 
-// SaveHzwTxTest 创建Hzw 事务测试
-// @Summary 创建Hzw
-// @Description 创建新的Hzw对象
+/*
+// SaveHzw2TxTest 创建Hzw2 事务测试
+// @Summary 创建Hzw2
+// @Description 创建新的Hzw2对象
 // @Tags hzw
 // @Accept  json
 // @Produce  json
-// @Param hzw body model.Hzw true "Hzw信息"
-// @Success 200 {object} model.Hzw
+// @Param hzw body model.Hzw2 true "Hzw2信息"
+// @Success 200 {object} model.Hzw2
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /hzwtxtest [put]
-func (ctl *HzwController) SaveHzwTxTest(ginc *gin.Context) {
-	var hzw model.Hzw
+func (ctl *Hzw2Controller) SaveHzw2TxTest(ginc *gin.Context) {
+	var hzw model.Hzw2
 	if err := ginc.ShouldBindJSON(&hzw); err != nil {
 		ginc.JSON(400, gin.H{"error": err.Error()})
 		return
 	}
 	ctx := context.Background()
-	result, err := ctl.userService.CreateHzwTxTest(ctx, &hzw)
+	result, err := ctl.userService.CreateHzw2TxTest(ctx, &hzw)
 	if err != nil {
 		ginc.JSON(500, gin.H{"error": err.Error()})
 		return
@@ -103,27 +104,28 @@ func (ctl *HzwController) SaveHzwTxTest(ginc *gin.Context) {
 
 	ginc.JSON(200, result)
 }
+*/
 
 /*
-// SaveHzwWithTx 创建Hzw 事务测试
-// @Summary 创建Hzw
-// @Description 创建新的Hzw对象
+// SaveHzw2WithTx 创建Hzw2 事务测试
+// @Summary 创建Hzw2
+// @Description 创建新的Hzw2对象
 // @Tags hzw
 // @Accept  json
 // @Produce  json
-// @Param hzw body model.Hzw true "Hzw信息"
-// @Success 200 {object} model.Hzw
+// @Param hzw body model.Hzw2 true "Hzw2信息"
+// @Success 200 {object} model.Hzw2
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /hzwwithtx [put]
-func (ctl *HzwController) SaveHzwWithTx(ginc *gin.Context) {
-	var hzw model.Hzw
+func (ctl *Hzw2Controller) SaveHzw2WithTx(ginc *gin.Context) {
+	var hzw model.Hzw2
 	if err := ginc.ShouldBindJSON(&hzw); err != nil {
 		ginc.JSON(400, gin.H{"error": err.Error()})
 		return
 	}
 	ctx := context.Background()
-	result, err := ctl.userService.CreateHzwWithTx(ctx, &hzw)
+	result, err := ctl.userService.CreateHzw2WithTx(ctx, &hzw)
 	if err != nil {
 		ginc.JSON(500, gin.H{"error": err.Error()})
 		return
